kube/ingress/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-svc            #自定义的服务名
spec:
  type: NodePort           #
  ports:
    - port: 80        #服务监听的端口
      targetPort: 8082       #转发到后端的端口号
      protocol: TCP
      name: http
  selector:
    app: dex               #Deployment name
